@@ -202,7 +202,7 @@ main_eigenes_spiel(int& argc, char* argv[])
     if (spielraster.bots_im_spiel() == 1)
       break;
 #endif
-    break;
+//    break;
   } // while (spielraster.bots_im_spiel())
 
   ui->spiel_endet();
